# corn

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
charm-quark/: Makefile.am  Makefile.in  charm-quark
corn/: Makefile.am  configuration.c  configuration.h  corn.schemas  cpris-root.c  cpris-root.h  cpris-root.xml  db.c  db.h  dbus.c  dbus.h  debug.h  fifo.c  fifo.h  gettext.h  main.c  main.h  mpris-player-glue.h  mpris-player.c  mpris-player.h  mpris-player.xml  mpris-root.c  mpris-root.h  mpris-root.xml  mpris-tracklist-glue.h  mpris-tracklist.c  mpris-tracklist.h  mpris-tracklist.xml  music-control.c  music-control.h  music-metadata.c  music-metadata.h  music.c  music.h  parsefile.c  parsefile.h  playlist-random.c  playlist-random.h  playlist.c  playlist.h  (+12 more)
m4/: Makefile.in
pixmaps/: Makefile.am  Makefile.in
po/: LINGUAS  Makevars  POTFILES.in  corn.pot  ko.gmo  ko.po  quark.pot
quark/: Makefile.am  Makefile.in  dbus.c  fifo.c  fifo.h  main.c  main.h  mpris-player.xml  mpris-root-glue.h  mpris-root.xml  music.c  music.h  parsefile.c  parsefile.h  playlist.c  playlist.h  quark.schemas
strange-quark/: Makefile.am  Makefile.in  applet.c  applet.h  editor.c  editor.h  main.c  marshalers.c  marshalers.h  quark.desktop  quarkclient.c  quarkclient.h  strange-quark.schemas  trayicon.c  trayicon.h
tests/: run.sh
